# sfrs

./: .env.test  .gitignore  Cargo.toml  README.md  test.sh
docker/: Dockerfile
migrations/2020-02-20-085623_create_user/: up.sql
migrations/2020-02-21-011449_create_items/: down.sql  up.sql
migrations/2020-02-21-102019_create_tokens/: down.sql  up.sql
migrations/2020-02-22-110735_initial_indices/: down.sql  up.sql
src/: api.rs  db.rs  item.rs  lock.rs  main.rs  schema.rs  sync_tokens.rs  tests.rs  tokens.rs  user.rs
