[package]
name = "sfrs"
version = "0.1.0"
authors = ["Peter Cai <peter@typeblog.net>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["diesel_sqlite_pool"] }
rocket_cors = "0.5.1"
jwt = "0.4.0"
diesel = { version = "1.4.3", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.9.0"
lazy_static = "1.4.0"
serde = { version = "1.0.104", features = ["derive"] }
scrypt = "0.2.0"
rust-crypto = "0.2.36"
chrono = { version = "0.4", features = ["serde"] }