[package]
name = "sfrs"
version = "0.1.0"
authors = ["Peter Cai <peter@typeblog.net>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["diesel_sqlite_pool"] }
rocket_cors = "0.5.1"
diesel = { version = "1.4.3", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.9.0"
lazy_static = "1.4.0"
serde = { version = "1.0.104", features = ["derive"] }
scrypt = "0.2.0"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
serde_json = "1.0"
regex = "1"
itertools = "0.8"